--- a/assets/style.css
+++ b/assets/style.css
@@ -102,8 +102,8 @@ header{
 .halfpage{
   display:flex;
   flex-wrap: wrap;
-  width: 96%;
-  height:auto;
+  width: 100%;
+  height:400px;
   border:4px solid blue;
   margin:5px;
   position:relative;
